// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchButton renders correctly 1`] = `
<DocumentFragment>
  .cache-13sohwl-StyledSwitch-segment {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
}

.cache-13sohwl-StyledSwitch-segment[data-checked='true'] {
  cursor: auto;
  color: #390171;
  border-color: #390171;
}

.cache-13sohwl-StyledSwitch-segment[aria-disabled='true'] {
  cursor: not-allowed;
  color: #d4dae7;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  pointer-events: none;
}

.cache-13sohwl-StyledSwitch-segment[aria-disabled='true'][data-checked='true'] {
  color: #d4dae7;
  border-color: #fcfcfd;
}

.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):hover,
.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):focus {
  border-color: #390171;
}

.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):hover {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'] {
  font-size: 14;
  height: 40px;
  -webkit-transition: none;
  transition: none;
  border-radius: 4px;
  box-shadow: none;
  border-color: transparent;
  color: #4a4f62;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:hover,
.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'][data-checked='true'] {
  background-color: #4f0599;
  color: #ffffff;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'][aria-disabled='true'] {
  color: #d4dae7;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'][aria-disabled='true'][data-checked='true'] {
  color: #d4dae7;
  background-color: #f6f6f8;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:not([data-checked='true']):not([aria-disabled='true']):hover,
.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:not([data-checked='true']):not([aria-disabled='true']):focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-disabled="false"
    class="e16krxq01 cache-13sohwl-StyledSwitch-segment"
    data-checked="false"
    for="radio-choice"
  >
    Choice
    <input
      aria-checked="false"
      class="cache-18s3dma-StyledRadio e16krxq00"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-13sohwl-StyledSwitch-segment {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
}

.cache-13sohwl-StyledSwitch-segment[data-checked='true'] {
  cursor: auto;
  color: #390171;
  border-color: #390171;
}

.cache-13sohwl-StyledSwitch-segment[aria-disabled='true'] {
  cursor: not-allowed;
  color: #d4dae7;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  pointer-events: none;
}

.cache-13sohwl-StyledSwitch-segment[aria-disabled='true'][data-checked='true'] {
  color: #d4dae7;
  border-color: #fcfcfd;
}

.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):hover,
.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):focus {
  border-color: #390171;
}

.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):hover {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'] {
  font-size: 14;
  height: 40px;
  -webkit-transition: none;
  transition: none;
  border-radius: 4px;
  box-shadow: none;
  border-color: transparent;
  color: #4a4f62;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:hover,
.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'][data-checked='true'] {
  background-color: #4f0599;
  color: #ffffff;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'][aria-disabled='true'] {
  color: #d4dae7;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'][aria-disabled='true'][data-checked='true'] {
  color: #d4dae7;
  background-color: #f6f6f8;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:not([data-checked='true']):not([aria-disabled='true']):hover,
.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:not([data-checked='true']):not([aria-disabled='true']):focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-disabled="true"
    class="e16krxq01 cache-13sohwl-StyledSwitch-segment"
    data-checked="false"
    for="radio-choice"
  >
    Choice
    <input
      aria-checked="false"
      aria-disabled="true"
      class="cache-18s3dma-StyledRadio e16krxq00"
      disabled=""
      id="radio-choice"
      name="radio"
      style="pointer-events: none;"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with complex child 1`] = `
<DocumentFragment>
  .cache-13sohwl-StyledSwitch-segment {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
}

.cache-13sohwl-StyledSwitch-segment[data-checked='true'] {
  cursor: auto;
  color: #390171;
  border-color: #390171;
}

.cache-13sohwl-StyledSwitch-segment[aria-disabled='true'] {
  cursor: not-allowed;
  color: #d4dae7;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  pointer-events: none;
}

.cache-13sohwl-StyledSwitch-segment[aria-disabled='true'][data-checked='true'] {
  color: #d4dae7;
  border-color: #fcfcfd;
}

.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):hover,
.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):focus {
  border-color: #390171;
}

.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):hover {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'] {
  font-size: 14;
  height: 40px;
  -webkit-transition: none;
  transition: none;
  border-radius: 4px;
  box-shadow: none;
  border-color: transparent;
  color: #4a4f62;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:hover,
.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'][data-checked='true'] {
  background-color: #4f0599;
  color: #ffffff;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'][aria-disabled='true'] {
  color: #d4dae7;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'][aria-disabled='true'][data-checked='true'] {
  color: #d4dae7;
  background-color: #f6f6f8;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:not([data-checked='true']):not([aria-disabled='true']):hover,
.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:not([data-checked='true']):not([aria-disabled='true']):focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-disabled="true"
    class="e16krxq01 cache-13sohwl-StyledSwitch-segment"
    data-checked="true"
    for="radio-choice"
  >
    true true
    <input
      aria-checked="true"
      aria-disabled="true"
      checked=""
      class="cache-18s3dma-StyledRadio e16krxq00"
      disabled=""
      id="radio-choice"
      name="radio"
      style="pointer-events: none;"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with variant segment 1`] = `
<DocumentFragment>
  .cache-13sohwl-StyledSwitch-segment {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
}

.cache-13sohwl-StyledSwitch-segment[data-checked='true'] {
  cursor: auto;
  color: #390171;
  border-color: #390171;
}

.cache-13sohwl-StyledSwitch-segment[aria-disabled='true'] {
  cursor: not-allowed;
  color: #d4dae7;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  pointer-events: none;
}

.cache-13sohwl-StyledSwitch-segment[aria-disabled='true'][data-checked='true'] {
  color: #d4dae7;
  border-color: #fcfcfd;
}

.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):hover,
.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):focus {
  border-color: #390171;
}

.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):hover {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-13sohwl-StyledSwitch-segment:not([data-checked='true']):not([aria-disabled='true']):focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'] {
  font-size: 14;
  height: 40px;
  -webkit-transition: none;
  transition: none;
  border-radius: 4px;
  box-shadow: none;
  border-color: transparent;
  color: #4a4f62;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:hover,
.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'][data-checked='true'] {
  background-color: #4f0599;
  color: #ffffff;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'][aria-disabled='true'] {
  color: #d4dae7;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment'][aria-disabled='true'][data-checked='true'] {
  color: #d4dae7;
  background-color: #f6f6f8;
}

.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:not([data-checked='true']):not([aria-disabled='true']):hover,
.cache-13sohwl-StyledSwitch-segment[data-variant='segment']:not([data-checked='true']):not([aria-disabled='true']):focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-disabled="false"
    class="e16krxq01 cache-13sohwl-StyledSwitch-segment"
    data-checked="false"
    data-variant="segment"
    for="radio-choice"
  >
    Choice
    <input
      aria-checked="false"
      class="cache-18s3dma-StyledRadio e16krxq00"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;
